Fix Web View scrolling bug due to BVC's _temporaryNativeController.

When a URL is loaded in web view, the web view needs to have a positive
y-offset to make room for the omnibar. This offset does not apply for
native controller. The _temporaryNativeController property in BVC is
causing some web views to be incorrectly treated as native controller
views and hence not get the y-offset. This property is meant to be
a transient property before a tab is connected to its model. Hence,
it should be safe to reset this property when a page finish loading.

Bug: 759887
Change-Id: If3a9b8625bccbe4e305b6b624e315df731416092